--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-rpm_menubar.xcodeproj/kriscollins.pbxuser
-rpm_menubar.xcodeproj/kriscollins.mode1v3
+rpm_menubar.xcodeproj/*.pbxuser
+rpm_menubar.xcodeproj/*.mode1v3
 
